Avoid wrapping stars; Restore green colors on filters

--- a/src/styles/cropTable.scss
+++ b/src/styles/cropTable.scss
@@ -37,13 +37,11 @@
 .activeCartBtn {
   background-color: $progressColor !important;
   color: white !important;
-  font-weight: bold;
 }
 
 .inactiveCartBtn {
   background-color: #e3f2f4 !important;
   color: black;
-  font-weight: bold;
 }
 
 .rating,
